# myco

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE.md  README.md
emacs/: myco-mode.el
lib/: lib.lisp  lib.myco  lib2.lisp
src/: atom.rs  base_lib.rs  compiler.rs  env.rs  errors.rs  eval.rs  expr.rs  funcs.rs  jitter.rs  main.rs  number.rs  opcodes.rs  parser.rs  proc.rs  procedure.rs  std_lib.rs  symbol.rs  vm.rs
test/: bench.lua  let.myco  map.myco  recur.lisp  recursion.lisp  splice.myco  suite.myco  tailcall.myco  unless.lisp  wat.myco
