[package]
name = "rust-lisp"
version = "0.0.1"
authors = ["Ian Quick <ian.quick@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ibawt/rust-lisp"

[dependencies.readline]
git = "https://github.com/ibawt/rust-readline.git"
rev = "things"

[dependencies]
lazy_static = "0.1"

[profile.release]
debug=true
